--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -2,41 +2,86 @@
 # generated 2024-01-21, Mozilla Guideline v5.7, nginx 1.24.0, OpenSSL 3.1.4, intermediate configuration
 # https://ssl-config.mozilla.org/#server=nginx&version=1.24.0&config=intermediate&openssl=3.1.4&guideline=5.7
 
+# Redirect HTTP to HTTPS
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-
-    # To Configure SSL, comment all lines within the Non-SSL section and uncomment all lines under the SSL section. 
-    ########################################  Non-SSL  ########################################
-    server_name localhost;
- 
-    # https://docs.nginx.com/nginx/admin-guide/web-server/compression/
-    # gzip on;
-    # gzip_vary on;
-    # gzip_proxied any;
-    # gzip_comp_level 6;
-    # gzip_buffers 16 8k;
-    # gzip_http_version 1.1;
-    # gzip_types text/css application/javascript application/json application/octet-stream;
-
-    # Increase the client_max_body_size to allow larger file uploads
-    # The default limits for image uploads as of 11/22/23 is 20MB/file, and 25MB/request
-    client_max_body_size 25M;
-
-    location /api/ {
-        proxy_pass http://api:3080$request_uri;
-    }
-
-    location / {
-        proxy_pass http://api:3080/;
-    }
-
-    ########################################  SSL  ########################################
-#    # Redirect all http traffic to https
-#    location / {
-#        return 301 https://$host$request_uri;
-#    }
+    listen 80;
+    server_name chat.jaroncohen.com;
+    return 301 https://$server_name$request_uri;
 }
+
+# HTTPS server
+server {
+    listen 443 ssl http2;
+    server_name chat.jaroncohen.com;
+
+    # SSL Configuration
+    ssl_certificate /etc/letsencrypt/live/chat.jaroncohen.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/chat.jaroncohen.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    # Security headers
+    add_header Strict-Transport-Security "max-age=31536000" always;
+
+    # Proxy to LibreChat API
+    location / {
+        proxy_pass http://api:3080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        proxy_buffering off;
+    }
+
+    # Handle large file uploads
+    client_max_body_size 50M;
+}
+
+
+
+# server {
+#     listen 80 default_server;
+#     listen [::]:80 default_server;
+
+#     # To Configure SSL, comment all lines within the Non-SSL section and uncomment all lines under the SSL section. 
+#     ########################################  Non-SSL  ########################################
+#     server_name localhost;
+ 
+#     # https://docs.nginx.com/nginx/admin-guide/web-server/compression/
+#     # gzip on;
+#     # gzip_vary on;
+#     # gzip_proxied any;
+#     # gzip_comp_level 6;
+#     # gzip_buffers 16 8k;
+#     # gzip_http_version 1.1;
+#     # gzip_types text/css application/javascript application/json application/octet-stream;
+
+#     # Increase the client_max_body_size to allow larger file uploads
+#     # The default limits for image uploads as of 11/22/23 is 20MB/file, and 25MB/request
+#     client_max_body_size 25M;
+
+#     location /api/ {
+#         proxy_pass http://api:3080$request_uri;
+#     }
+
+#     location / {
+#         proxy_pass http://api:3080/;
+#     }
+
+#     ########################################  SSL  ########################################
+# #    # Redirect all http traffic to https
+# #    location / {
+# #        return 301 https://$host$request_uri;
+# #    }
+# }
+
+
+
+
 
 #server {
 #    listen 443 ssl http2;
@@ -91,4 +136,4 @@ server {
 #    location / {
 #        proxy_pass http://api:3080;
 #    }
-#}
+# }
