--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,7 +18,7 @@ steps:
       # the official, pre-built image from GitHub's container registry.
       - "--image=ghcr.io/danny-avila/librechat-api:latest"
 
-      - "--region=africa-south1-b" # IMPORTANT: Change this to your preferred region (e.g., us-east1).
+      - "--region=africa-south1" # IMPORTANT: Change this to your preferred region (e.g., us-east1).
       - "--platform=managed" # Standard for Cloud Run.
       - "--allow-unauthenticated" # This makes your chat URL public.
 
